# pubmed_matches

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.processor  README.md  docker-compose.yml  process_folder.py  pubmed_processor.py  pyproject.toml
database/init/: 01-schema.sql
scripts/: build.sh  run_matcher.sh
src/: db.rs  integration_controller.rs  main.rs  matching_service.rs  models.rs  publication_service.rs  pubmed_engine.rs  utils.rs
