[package]
name = "pubmed_integration"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A scalable system for integrating PubMed data with user publications"

[dependencies]
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
flate2 = "1.0"
quick-xml = "0.28"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio", "tls-rustls", "chrono", "bigdecimal" ] }
regex = "1.8"
indicatif = "0.17"
strsim = "0.10"
dashmap = "5.4"
num_cpus = "1.15"
bincode = "1.3"
lazy_static = "1.4"
tempfile = "3.5"
parking_lot = "0.12"
dotenv = "0.15"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
num-traits = "0.2.19"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
