[package]
name = "pubmed-matcher"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance fuzzy matching for publications and PubMed records"

[dependencies]
clap = "4.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
rayon = "1.7"
strsim = "0.10"
indicatif = "0.17"
chrono = "0.4.40"
serde_json = "1.0.140"
